--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.2",
     "esbuild": "^0.19.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
