:sparkles: Feat: #9 renderへの初回デプロイ

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,5 @@ test:
 #
 production:
   <<: *default
-  database: mutro_production
-  username: mutro
-  password: <%= ENV["MUTRO_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
+
