--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,6 @@ databases:
   - name: mutro_db
     databaseName: mutro_db
     user: haganenoubik
-    region: singapore
 
 services:
   - type: web
@@ -14,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mutro
+          name: mutro_db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
