--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,6 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: mutro_db
-  username: haganenoubik
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -31,7 +29,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: mutro
+  # username: mutro
 
   # The password associated with the postgres role (username).
   # password:
@@ -43,7 +41,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  # port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -83,5 +81,7 @@ test:
 #
 production:
   <<: *default
+  database: mutro_db
+  username: haganenoubik
   url: <%= ENV['DATABASE_URL'] %>
 
