--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "daisyui": "^3.9.2",
     "esbuild": "^0.19.4",
     "postcss": "^8.4.31",
+    "stimulus-autocomplete": "^3.1.0",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
